tests/errmsgs/tinvalid-name.nim
discard """
  description: '''
    Test that a proper error message is printed for a module with invalid name
  '''
  errormsg: "invalid module name: 'tinvalid-name'"
"""
